--- a/index.html
+++ b/index.html
@@ -2,12 +2,74 @@
 <html lang="hi">
 <head>
   <meta charset="UTF-8">
-  <title>MS Furniture</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MS Furniture | Udyam Registered Furniture Works</title>
+  <meta name="description" content="MS Furniture – Udyam Registered Furniture Manufacturing & Works, Sirsa Haryana. Bed, Almirah, Table, Chair, Sofa – Order par banwayein.">
+  <style>
+    body{margin:0;font-family:Arial,Helvetica,sans-serif;background:#f4f4f4;color:#333}
+    header{background:#1e3c72;color:#fff;padding:30px 15px;text-align:center}
+    nav{background:#16325c;padding:10px;text-align:center}
+    nav a{color:#fff;margin:0 12px;text-decoration:none;font-weight:bold}
+    section{background:#fff;margin:20px;padding:20px;border-radius:8px;box-shadow:0 2px 8px rgba(0,0,0,0.1)}
+    h2{color:#1e3c72}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:15px}
+    .card{border:1px solid #ddd;border-radius:6px;padding:15px;text-align:center}
+    .badge{background:#e8f0fe;border-left:5px solid #1e3c72;padding:15px;margin:20px 0}
+    footer{background:#1e3c72;color:#fff;text-align:center;padding:15px}
+  </style>
 </head>
 <body>
+
+<header>
   <h1>MS Furniture</h1>
-  <p>Udyam Registered Enterprise</p>
-  <p>Mobile: 9728599601</p>
-  <p>Furniture Manufacturing & Work</p>
+  <p>Furniture Manufacturing & Works</p>
+</header>
+
+<nav>
+  <a href="#about">हमारे बारे में</a>
+  <a href="#work">हमारा काम</a>
+  <a href="#trust">भरोसा</a>
+  <a href="#contact">संपर्क</a>
+</nav>
+
+<section id="about">
+  <h2>हमारे बारे में</h2>
+  <p>
+    MS Furniture एक भरोसेमंद फर्नीचर मैन्युफैक्चरिंग यूनिट है।
+    यहाँ ऑर्डर पर बेड, अलमारी, टेबल, कुर्सी, सोफा और अन्य लकड़ी का फर्नीचर बनाया जाता है।
+  </p>
+</section>
+
+<section id="work">
+  <h2>हमारा काम</h2>
+  <div class="grid">
+    <div class="card">बेड</div>
+    <div class="card">अलमारी</div>
+    <div class="card">टेबल</div>
+    <div class="card">कुर्सी</div>
+    <div class="card">सोफा</div>
+    <div class="card">ऑर्डर पर फर्नीचर</div>
+  </div>
+</section>
+
+<section id="trust">
+  <h2>भरोसा और प्रमाण</h2>
+  <div class="badge">
+    <strong>Udyam Registered Enterprise</strong><br>
+    UDYAM-HR-17-0058149<br>
+    Ministry of MSME, Government of India
+  </div>
+</section>
+
+<section id="contact">
+  <h2>संपर्क करें</h2>
+  <p><strong>मोबाइल:</strong> 9728599601</p>
+  <p><strong>पता:</strong> Nehra Memorial Colony, Near Old Bus Stand, Nuhianwali, Odhan, Sirsa, Haryana – 125077</p>
+</section>
+
+<footer>
+  © 2025 MS Furniture | All Rights Reserved
+</footer>
+
 </body>
 </html>
